monitoring/kube-prometheus-stack/grafana-ts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ts
  namespace: monitoring
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: kube-prometheus-stack-grafana
      port:
        number: 80
  tls:
    - hosts:
        - grafana          # → grafana.zebra-alewife.ts.net
